finish section get-inspired

--- a/index.html
+++ b/index.html
@@ -216,14 +216,15 @@
                                     <img src="img/house-red.svg" alt="icon red house"></img>
                                 </div>
                             </div>
-                            <div class="line-after-red">
-                                <p class="titel-2">
-                                    <span class="box-title-2">
-                                        <span class="text-title-2">
-                                            Architecture
-                                        </span>
+                            <p class="titel-2">
+                                <span class="box-title-2">
+                                    <span class="text-title-2">
+                                        Architecture
                                     </span>
-                                </p>
+                                </span>
+                            </p>
+                            <div class="line">
+                                <div class="red-line"></div>
                             </div>
                             <span class="box-subtitle-title-2">
                                 <span class="text-subtitle-title-2"> Every architecture design project is a
@@ -558,21 +559,21 @@
                                                 alt="lux villa"></img>
                                         </picture>
                                     </div>
-                                    <div class="line-after-red">
-                                        <p class="titel-2">
-                                            <span class="box-title-2">
-                                                <span class="text-title-2">
-                                                    Architecture
-                                                </span>
+                                    <div class="group-captions">
+                                        <span class="text-offer-group">
+                                            <span class="text-offer-red">
+                                                Exterior
                                             </span>
-                                        </p>
+                                        </span>
+                                        <span class="text-offer-group">
+                                            <span class="text-offer-black">
+                                                9 April , 2019
+                                            </span>
+                                        </span>
                                     </div>
-                                    <span class="box-subtitle-title-2">
-                                        <span class="text-subtitle-title-2"> Every architecture design project is a
-                                            challenge
-                                            that
-                                            we accept eagerly. Take a
-                                            closer look at our top projects.</span>
+                                    <span class="box-subtitle-inspired">
+                                        <span class="text-subtitle-inspired"> Luxury Villa on the Hollywood Hills
+                                        </span>
                                     </span>
                                     <div class="group-learn">
                                         <div class="btn-group-inner">
@@ -593,23 +594,20 @@
                                     <div class="group-captions">
                                         <span class="text-offer-group">
                                             <span class="text-offer-red">
-                                                   Exterior
-                                            </span>
-                                        </span>
-                                    </div>
-                                    <div class="group-captions">
-                                        <span class="text-offer-group">
-                                            <span class="text-offer-red">
                                                 Exterior
                                             </span>
                                         </span>
+                                        <span class="text-offer-group">
+                                            <span class="text-offer-black">
+                                                15 June , 2019
+                                            </span>
+                                        </span>
                                     </div>
-                                    <span class="box-subtitle-title-2">
-                                        <span class="text-subtitle-title-2"> We give your office and homes the most
-                                            attractive look, improving the functionality of your property by optimizing
-                                            the
-                                            space. </span>
-                                    </span>
+                                    <span class="box-subtitle-inspired">
+                                        <span class="text-subtitle-inspired">Spacious Terrace Redesign in a Bali Resort
+                                            Hotel
+                                        </span>
+                                        </span>
                                     <div class="group-learn">
                                         <div class="btn-group-inner">
                                             <a href="#"><button class="button learn">Featured in
@@ -626,24 +624,27 @@
                                                 alt="Los angeles"></img>
                                         </picture>
                                     </div>
-                                    <div class="line-after-red">
-                                        <p class="titel-2">
-                                            <span class="box-title-2">
-                                                <span class="text-title-2">
-                                                    Interior Design
-                                                </span>
+                                    <div class="group-captions">
+                                        <span class="text-offer-group">
+                                            <span class="text-offer-red">
+                                                Exterior
                                             </span>
-                                        </p>
+                                        </span>
+                                        <span class="text-offer-group">
+                                            <span class="text-offer-black">
+                                                28 October , 2019
+                                             </span>
+                                        </span>
                                     </div>
-                                    <span class="box-subtitle-title-2">
-                                        <span class="text-subtitle-title-2"> From bedrooms to conference halls, we offer
-                                            you
-                                            our professional vision of modern and comfortable premises. </span>
+                                    <span class="box-subtitle-inspired">
+                                        <span class="text-subtitle-inspired"> A Large Mansion in Los Angeles for a
+                                            Family of 6 People
+                                        </span>
                                     </span>
                                     <div class="group-learn">
                                         <div class="btn-group-inner">
                                             <a href="#"><button class="button learn">Featured in
-                                                            Dezeen</button></a>
+                                                    Dezeen</button></a>
                                         </div>
                                     </div>
                                 </div>
