--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
-
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="section-after-banner.css">
     <link rel="stylesheet" href="arch.css">
     <link rel="stylesheet" href="banner-after-menu.css">
@@ -30,7 +31,28 @@
 
 <body class="visible">
     <header>
-        <div class="container-navbar">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">ARCH</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" href="#">Services</a>
+                        <a class="nav-link" href="#">About us</a>
+                        <a class="nav-link disabled">Projects</a>
+                        <a class="nav-link disabled">Testimonialss</a>
+                        <a class="nav-link disabled">Pricing</a>
+                        <a class="nav-link disabled">Contact us.</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <!-- <div class="container-navbar">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
                     <div class="block-section-menu">
@@ -48,9 +70,7 @@
 
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
-
                             <div class="block-section-menu">
-
                                 <a class="section-menu" href="#burgerabout">
                                     <p class="text-style-header">Services</p>
                                 </a><br>
@@ -88,121 +108,48 @@
                     </div>
                 </div>
             </nav>
-        </div>
-        <!-- <div class="block-logo">
-            <div class="block-logo-inner">
-                <div class="logo-flex">
-                    <div class="sec-left-logo">
-                        <div class="sec-left-inner">
-                            <div class="logo-text-content">
-                                <a href="#">
-                                    <p>
-                                        <span class="logo-text">ARCH</span><span class="red-dot">.</span>
-                                    </p>
-                                </a>
+        </div> -->
+    </header>
+    <section class="banner-after-menu">
+        <div class="cont-section-inner">
+            <header class="banner-sec">
+                <div class="grid-banner">
+                    <div class="grid-inner">
+                        <div class="grid-banner-inner">
+                            <div class="content-grid">
+                                <h2 class="info-text">
+                                    <span class="text-block">Architecture, Interior & Exterior Design</span>
+                                </h2>
+                                <span class="info-text-subtitle">
+                                    A dedicated team of designers and architects are here to implement your
+                                    project.
+                                </span>
                             </div>
                         </div>
-                    </div>
-                    <div class="sec-center-logo">
-                        <div class="sec-center-logo-inner">
-                            <nav class="menu-header">
-                                <ul class="menu-1">
-                                    <li class="list-item">
-                                        <span class="link-item">
-                                            <a href="/#service">Services</a>
-                                        </span>
-                                    </li>
-                                    <li class="list-item">
-                                        <span class="link-item">
-                                            <a href="/#about-us">About us</a>
-                                        </span>
-                                    </li>
-                                    <li class="list-item">
-                                        <span class="link-item">
-                                            <a href="/#projects">Projects</a>
-                                        </span>
-                                    </li>
-                                    <li class="list-item">
-                                        <span class="link-item">
-                                            <a href="/#testimonialss">Testimonialss</a>
-                                        </span>
-                                    </li>
-                                    <li class="list-item">
-                                        <span class="link-item">
-                                            <a href="/#pricing">Pricing</a>
-                                        </span>
-                                    </li>
-                                    <li class="list-item">
-                                        <span class="link-item">
-                                            <a href="/#contact us">Contact us</a>
-                                        </span>
-                                    </li>
-                                </ul>
-                            </nav>
-                        </div>
-                    </div>
-                    <div class="sec-right-logo">
-                        <div class="sec-right-logo-inner">
-                            <div class="social-icons">
-                                <a href="www.facebook.com"> 
-                                <img src="img/facebook-icon-red.svg" alt="facebook icon"></img>
-                                </a> 
-                            </div>
-                            <div class="social-icons">
-                                 <a href="www.instagram.com"> 
-                                <img src="img/instagram-icon-red.svg" alt="instagram icon"></img>
-                                </a>
-                            </div>
-                            <div class="social-icons">
-                                <a href="www.youtube.com"> 
-                                <img src="img/youtube-icon-red.svg" alt="youtube icon"></img>
-                                </a>
-                            </div>
+                        <div class="content-grid">
+                            <div class="content-empty"></div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div> -->
-        <section class="banner-after-menu">
-            <div class="cont-section-inner">
-                <header class="banner-sec">
-                    <div class="grid-banner">
-                        <div class="grid-inner">
-                            <div class="grid-banner-inner">
-                                <div class="content-grid">
-                                    <h2 class="info-text">
-                                        <span class="text-block">Architecture, Interior & Exterior Design</span>
-                                    </h2>
-                                    <span class="info-text-subtitle">
-                                        A dedicated team of designers and architects are here to implement your
-                                        project.
-                                    </span>
-                                </div>
-                            </div>
-                            <div class="content-grid">
-                                <div class="content-empty"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="button-banner">
-                        <div class="grid-button-banner">
-                            <div class="grid-inner-button">
-                                <div class="grid-button-item">
-                                    <div class="item-inner-button">
-                                        <div class="item-group">
-                                            <div class="btns-group-inner">
-                                                <a href="#"><button class="button red-but">Request a quote</button></a>
-                                                <a href="#"><button class="button tr-white-but">Learn more</button></a>
-                                            </div>
+                <div class="button-banner">
+                    <div class="grid-button-banner">
+                        <div class="grid-inner-button">
+                            <div class="grid-button-item">
+                                <div class="item-inner-button">
+                                    <div class="item-group">
+                                        <div class="btns-group-inner">
+                                            <a href="#"><button class="button red-but">Request a quote</button></a>
+                                            <a href="#"><button class="button tr-white-but">Learn more</button></a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </header>
-            </div>
-        </section>
+                </div>
+            </header>
+        </div>
+    </section>
     </header>
     <!-- <main> -->
     <section class="cont-collection">
@@ -607,7 +554,7 @@
                                         <span class="text-subtitle-inspired">Spacious Terrace Redesign in a Bali Resort
                                             Hotel
                                         </span>
-                                        </span>
+                                    </span>
                                     <div class="group-learn">
                                         <div class="btn-group-inner">
                                             <a href="#"><button class="button learn">Featured in
@@ -633,7 +580,7 @@
                                         <span class="text-offer-group">
                                             <span class="text-offer-black">
                                                 28 October , 2019
-                                             </span>
+                                            </span>
                                         </span>
                                     </div>
                                     <span class="box-subtitle-inspired">
