--- a/index.html
+++ b/index.html
@@ -52,63 +52,6 @@
                 </div>
             </div>
         </nav>
-        <!-- <div class="container-navbar">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                    <div class="block-section-menu">
-                        <a href="#">
-                            <p>
-                                <span class="logo-text">ARCH</span><span class="red-dot">.</span>
-                            </p>
-                        </a>
-                    </div>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                            <div class="block-section-menu">
-                                <a class="section-menu" href="#burgerabout">
-                                    <p class="text-style-header">Services</p>
-                                </a><br>
-                                <a class="section-menu" href="#burgermss">
-                                    <p class="text-style-header">About us</p>
-                                </a><br>
-                                <a class="section-menu" href="#maincoll">
-                                    <p class="text-style-header">Projects</p>
-                                </a>
-                                <a class="section-menu" href="#burgerblog">
-                                    <p class="text-style-header">Testimonialss</p>
-                                </a>
-                                <a class="section-menu" href="#burgerblog">
-                                    <p class="text-style-header">Pricing</p>
-                                </a>
-                                <a class="section-menu" href="#">
-                                    <p class="text-style-header">Contact us.</p>
-                                </a><br>
-                            </div>
-                            <div class="right-icons">
-                                <li class="icon-menu">
-                                    <a href="https://www.facebook.com"><img class="social-icons"
-                                            src="img/facebook-icon-red.svg" alt="Facebook Icon" width="100"></a>
-                                </li>
-                                <li class="icon-menu">
-                                    <a href="https://www.instagram.com"><img class="social-icons"
-                                            src="img/instagram-icon-red.svg" alt="Instagtam Icon" width="100"></a>
-                                </li>
-                                <li class="icon-menu">
-                                    <a href="https://www.youtube.com"><img class="social-icons"
-                                            src="img/youtube-icon-red.svg" alt="YouTube Icon" width="100"></a>
-                                </li>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </nav>
-        </div> -->
     </header>
     <section class="banner-after-menu">
         <div class="cont-section-inner">
@@ -382,7 +325,7 @@
                             <div class="item-portfo-inner">
                                 <div class="picture-item-portfo">
                                     <picture class="image-of-item">
-                                        <img class="style-image-of-card" src="img/house-a.webp" alt="house">
+                                        <img class="style-image-of-card" src="img/house-a.png" alt="house">
                                     </picture>
                                 </div>
                             </div>
@@ -391,7 +334,7 @@
                             <div class="item-portfo-inner">
                                 <div class="picture-item-portfo">
                                     <picture class="image-of-item">
-                                        <img class="style-image-of-card" src="img/house-b.webp" alt="house">
+                                        <img class="style-image-of-card" src="img/house-b.png" alt="house">
                                     </picture>
                                 </div>
                             </div>
@@ -400,7 +343,7 @@
                             <div class="item-portfo-inner">
                                 <div class="picture-item-portfo">
                                     <picture class="image-of-item">
-                                        <img class="style-image-of-card" src="img/house-c.webp" alt="house">
+                                        <img class="style-image-of-card" src="img/house-c.png" alt="house">
                                     </picture>
                                 </div>
                             </div>
@@ -409,7 +352,7 @@
                             <div class="item-portfo-inner">
                                 <div class="picture-item-portfo">
                                     <picture class="image-of-item">
-                                        <img class="style-image-of-card" src="img/house-d.webp" alt="house">
+                                        <img class="style-image-of-card" src="img/house-d.png" alt="house">
                                     </picture>
                                 </div>
                             </div>
@@ -418,7 +361,7 @@
                             <div class="item-portfo-inner">
                                 <div class="picture-item-portfo">
                                     <picture class="image-of-item">
-                                        <img class="style-image-of-card" src="img/house-e.webp" alt="house">
+                                        <img class="style-image-of-card" src="img/house-e.png" alt="house">
                                     </picture>
                                 </div>
                             </div>
@@ -427,7 +370,7 @@
                             <div class="item-portfo-inner">
                                 <div class="picture-item-portfo">
                                     <picture class="image-of-item">
-                                        <img class="style-image-of-card" src="img/house-f.webp" alt="house">
+                                        <img class="style-image-of-card" src="img/house-f.png" alt="house">
                                     </picture>
                                 </div>
                             </div>
