--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="section-after-banner.css">
     <link rel="stylesheet" href="arch.css">
     <link rel="stylesheet" href="banner-after-menu.css">
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="mission.css">
     <link rel="stylesheet" href="inspired.css">
     <link rel="stylesheet" href="form-email.css">
+    <link rel="stylesheet" href="collab.css">
 
 </head>
 
@@ -103,7 +104,7 @@
                     <div class="collection-inner-block">
                         <div class="content-grid">
                             <div class="item-group">
-                                <div class="icon-red-small">
+                                <div class="icon-small">
                                     <img src="img/house-red.svg" alt="icon red house"></img>
                                 </div>
                             </div>
@@ -135,7 +136,7 @@
                     <div class="collection-inner-block">
                         <div class="content-grid">
                             <div class="item-group">
-                                <div class="icon-red-small">
+                                <div class="icon-small">
                                     <img src="img/plan.svg" alt="icon plan"></img>
                                 </div>
                             </div>
@@ -164,7 +165,7 @@
                     <div class="collection-inner-block-end">
                         <div class="content-grid">
                             <div class="item-group">
-                                <div class="icon-red-small">
+                                <div class="icon-small">
                                     <img src="img/ruler.svg" alt="icon ruler"></img>
                                 </div>
                             </div>
@@ -570,9 +571,78 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section class="collab">
+        <div class="collab-inner">
+            <div class="collab-item">
+                <div class="collab-item-inner">
+                    <div class="item-group">
+                        <div class="icon-small">
+                            <img src="img/partnership.svg" alt="icon partnership"></img>
+                        </div>
+                    </div>
+                    <p class="text-sub-collab">
+                        <span>
+                            Partnership
+                        </span>
+                    </p>
+                    <p class="text-centre">
+                        <span> Let's collaborate!</span>
+                    </p>
+                    <div class="button-banner">
+                        <div class="grid-button-banner">
+                            <div class="grid-inner-button">
+                                <div class="grid-button-item">
+                                    <div class="item-inner-button">
+                                        <div class="item-group">
+                                            <div class="btns-group-inner">
+                                                <a href="#"><button class="button red-but">Get in touch</button></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="collab-item">
+                <div class="collab-item-inner">
+                    <div class="item-group">
+                        <div class="icon-small">
+                            <img src="img/projects.svg" alt="icon projects"></img>
+                        </div>
+                    </div>
+                    <p class="text-sub-collab">
+                        <span>
+                            Interior Design
+                        </span>
+                    </p>
+                    <p class="text-centre">
+                        <span> Request a consultation! </span>
+                    </p>
+                    <div class="button-banner">
+                        <div class="grid-button-banner">
+                            <div class="grid-inner-button">
+                                <div class="grid-button-item">
+                                    <div class="item-inner-button">
+                                        <div class="item-group">
+                                            <div class="btns-group-inner">
+                                                <a href="#"><button class="button red-but">Discuss a
+                                                        project</button></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </section>
-    
+
     <footer>
 
     </footer>
